--- a/README.html
+++ b/README.html
@@ -91,6 +91,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>The linear regression formula</li>
 <li>The coefficients of the linear regression</li>
 <li>The residual plots</li>
+<li><a href="http://tankokhua.github.io/shiny_slides">http://tankokhua.github.io/shiny_slides</a></li>
 </ul>
 <p>For more information about linear regression and interpretation of the results, you can sign up for Regression Models (<a href="https://www.coursera.org/course/regmods">https://www.coursera.org/course/regmods</a>) of the Data Science track.</p>
 </div>
