--- a/README.html
+++ b/README.html
@@ -52,8 +52,8 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
-<div id="shiny-app-used-for-exploratory-study-of-mtcars-dataset" class="section level2">
-<h2>Shiny App used for Exploratory Study of “mtcars” dataset</h2>
+<div id="shiny-app-for-exploratory-regression-analysis-of-mtcars-dataset" class="section level2">
+<h2>Shiny App for Exploratory Regression Analysis of “mtcars” dataset</h2>
 </div>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
@@ -62,6 +62,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <pre><code>##  [1] &quot;mpg&quot;  &quot;cyl&quot;  &quot;disp&quot; &quot;hp&quot;   &quot;drat&quot; &quot;wt&quot;   &quot;qsec&quot; &quot;vs&quot;   &quot;am&quot;   &quot;gear&quot;
 ## [11] &quot;carb&quot;</code></pre>
 <p>The purpose of this app is to allow user to carry out multivariate linear regression analysis of the 10 aspects of automobile design on the fuel consumption (mpg).</p>
+<ul>
+<li><a href="http://tankokhua.github.io/shiny_slides">http://tankokhua.github.io/shiny_slides</a></li>
+</ul>
 </div>
 <div id="launching-the-app" class="section level2">
 <h2>Launching the App</h2>
@@ -91,7 +94,6 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <li>The linear regression formula</li>
 <li>The coefficients of the linear regression</li>
 <li>The residual plots</li>
-<li><a href="http://tankokhua.github.io/shiny_slides">http://tankokhua.github.io/shiny_slides</a></li>
 </ul>
 <p>For more information about linear regression and interpretation of the results, you can sign up for Regression Models (<a href="https://www.coursera.org/course/regmods">https://www.coursera.org/course/regmods</a>) of the Data Science track.</p>
 </div>
